fixed overflow-y in songs list of SinglePlaylist page

--- a/react-app/src/pages/SinglePlaylist.css
+++ b/react-app/src/pages/SinglePlaylist.css
@@ -25,7 +25,6 @@
   width: 100%;
   margin-top: 20px;
   max-height: 80%;
-  overflow-y: scroll;
 }
 
 .playlist-songs-list li {
